# scdlbot

./: .buildpacks  .dockerignore  .env.sample  .flakeheaven_baseline  .flakehell_baseline  .gitignore  .pyup.yml  .readthedocs.yml  .render-buildpacks.json  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.rst  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Dockerfile.render  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  README.rst  app.json  circle.yml  docker-compose.yml  fabfile.py  help.md  noxfile.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements-docs.txt  requirements.txt  requirements_dev.txt  scdl.cfg  scdlbot.py  (+10 more)
.circleci/: config.yml
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  pythonpackage.yml  release.yml
bot_settings/: setabouttext.txt  setcommands.txt  setinline.txt
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
docs/_templates/: badges.html  github.html  moreinfo.html
docs/pages/: changelog.rst  contributing.rst
samples/systemd/: README.md  scdlbot-downloads.service  scdlbot-downloads.service.sample  scdlbot-ffmpeg.service  scdlbot-ffprobe.service  scdlbot-ffprobe.service.sample  scdlbot.service  telegram-bot-api.service.sample
scdlbot/: __init__.py  __main__.py  download_execution.py  download_worker.py  exceptions.py  ffmpeg_worker.py  ffprobe.py  metrics.py  models.py  run_download_worker.py  run_ffmpeg_worker.py  scdlbot.py  scdlbotng.py  tasks.py  url_extractor.py  utils.py
scdlbot/messages/: help.md  help.tg.md
scdlbot/metinler/: help.tg.md
scdlbot/texts/: direct_restriction.txt  dl_timeout.txt  failed.txt  help.tg.md  live_restriction.txt  no_audio.txt  no_urls.txt  not_admin.txt  old_msg.txt  region_restriction.txt  settings.tg.md  wait.txt  wait_beat.txt  wait_beet.txt  wait_bit.txt
telegram_settings/: about.txt  commands.txt  inline.txt  name.txt  setcommands.txt  setname.txt
tests/: __init__.py  test_scdlbot.py
